Bug: Fixed overflow issue on newsletter widget

--- a/src/app/components/newsletter-widget/newsletter-widget.component.scss
+++ b/src/app/components/newsletter-widget/newsletter-widget.component.scss
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     gap: 20px;
-    max-height: 45.5vh;
+    max-height: 45.5vw;
 
     .form-container {
         background-color: white;
